--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="287.66666666666669" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-qq-M0R">
                                         <rect key="frame" x="297.66666666666669" y="0.0" width="57.333333333333314" height="30"/>
@@ -292,13 +292,13 @@
                                 <rect key="frame" x="16" y="56" width="162" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Near" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rlj-4Q-bl0">
                                 <rect key="frame" x="16" y="95" width="162" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" spellCheckingType="no"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="laD-JM-3QC">
                                 <rect key="frame" x="0.0" y="132.33333333333331" width="375" height="522.66666666666674"/>
@@ -481,6 +481,10 @@
                         <outlet property="helperButton" destination="BUa-dE-nLZ" id="WVV-A8-CwZ"/>
                         <outlet property="locationTextField" destination="rlj-4Q-bl0" id="KzL-B4-SeC"/>
                         <outlet property="oneDollarSignButton" destination="UFy-fe-akQ" id="2nG-6M-68X"/>
+                        <outlet property="popoverAddButton" destination="ipm-Zs-pIY" id="GRs-Vr-Bwv"/>
+                        <outlet property="popoverAddressLabel" destination="nvz-vm-boJ" id="BEY-bB-LNF"/>
+                        <outlet property="popoverDismissButton" destination="7rO-Wr-nb0" id="z0U-e4-edR"/>
+                        <outlet property="popoverNameLabel" destination="Ch2-DI-ilS" id="xeY-cr-nSx"/>
                         <outlet property="popoverView" destination="B86-dC-jeh" id="Eq6-dt-7Xa"/>
                         <outlet property="restaurantTableView" destination="laD-JM-3QC" id="jzm-cq-OVn"/>
                         <outlet property="searchTermTextField" destination="6Ag-2j-fCY" id="0CX-za-Iat"/>
@@ -491,13 +495,69 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAv-0c-0bf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <view contentMode="scaleToFill" id="B86-dC-jeh">
-                    <rect key="frame" x="0.0" y="0.0" width="240" height="256"/>
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="360"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="93a Ossington Avenue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nvz-vm-boJ">
+                            <rect key="frame" x="16" y="296" width="208" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bang Bang Ice Cream and Bakery" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ch2-DI-ilS">
+                            <rect key="frame" x="16" y="267" width="208" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rO-Wr-nb0">
+                            <rect key="frame" x="134" y="316" width="90" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="90" id="XNw-qV-g9G"/>
+                                <constraint firstAttribute="height" constant="36" id="aZH-Hm-0BO"/>
+                            </constraints>
+                            <state key="normal" title="Dimiss"/>
+                            <connections>
+                                <action selector="popoverDismissButtonPressed:" destination="t4L-Ml-lkf" eventType="touchUpInside" id="pi4-3T-PH5"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipm-Zs-pIY">
+                            <rect key="frame" x="16" y="316" width="90" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="90" id="Q18-Ta-6Uo"/>
+                                <constraint firstAttribute="height" constant="36" id="xRP-N2-Nv2"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="popoverAddButtonPressed:" destination="t4L-Ml-lkf" eventType="touchUpInside" id="fCu-cA-qEk"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xty-ph-fuo">
+                            <rect key="frame" x="0.0" y="0.0" width="240" height="256"/>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="Xty-ph-fuo" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" id="3XL-Hy-ELx"/>
+                        <constraint firstItem="nvz-vm-boJ" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" constant="16" id="Dzz-Tu-cc0"/>
+                        <constraint firstItem="ipm-Zs-pIY" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" constant="16" id="EU4-jl-Pxi"/>
+                        <constraint firstItem="UeE-eQ-Ijo" firstAttribute="trailing" secondItem="7rO-Wr-nb0" secondAttribute="trailing" constant="16" id="F4c-m3-5eP"/>
+                        <constraint firstItem="Xty-ph-fuo" firstAttribute="top" secondItem="B86-dC-jeh" secondAttribute="top" id="H9f-or-Xvn"/>
+                        <constraint firstItem="UeE-eQ-Ijo" firstAttribute="trailing" secondItem="nvz-vm-boJ" secondAttribute="trailing" constant="16" id="Khp-eF-87G"/>
+                        <constraint firstItem="7rO-Wr-nb0" firstAttribute="top" secondItem="nvz-vm-boJ" secondAttribute="bottom" constant="2" id="LFe-gV-50t"/>
+                        <constraint firstItem="Ch2-DI-ilS" firstAttribute="top" secondItem="Xty-ph-fuo" secondAttribute="bottom" constant="11" id="MtX-D8-UBd"/>
+                        <constraint firstItem="nvz-vm-boJ" firstAttribute="top" secondItem="Ch2-DI-ilS" secondAttribute="bottom" constant="8" id="ZQt-F0-DBn"/>
+                        <constraint firstItem="Xty-ph-fuo" firstAttribute="trailing" secondItem="UeE-eQ-Ijo" secondAttribute="trailing" id="gTZ-oK-TiP"/>
+                        <constraint firstItem="7rO-Wr-nb0" firstAttribute="leading" secondItem="ipm-Zs-pIY" secondAttribute="trailing" constant="28" id="hG8-q3-oyd"/>
+                        <constraint firstItem="UeE-eQ-Ijo" firstAttribute="trailing" secondItem="Ch2-DI-ilS" secondAttribute="trailing" constant="16" id="iqL-e2-Qy7"/>
+                        <constraint firstItem="Ch2-DI-ilS" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" constant="16" id="mye-A7-7Fi"/>
+                        <constraint firstAttribute="bottom" secondItem="7rO-Wr-nb0" secondAttribute="bottom" constant="8" id="rOS-m7-xBa"/>
+                        <constraint firstAttribute="bottom" secondItem="ipm-Zs-pIY" secondAttribute="bottom" constant="8" id="udT-Xo-tEN"/>
+                    </constraints>
                     <viewLayoutGuide key="safeArea" id="UeE-eQ-Ijo"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="1049" y="595"/>
+            <point key="canvasLocation" x="1049" y="654"/>
         </scene>
     </scenes>
     <resources>
