--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -501,22 +501,24 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="93a Ossington Avenue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nvz-vm-boJ">
                             <rect key="frame" x="16" y="296" width="208" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bang Bang Ice Cream and Bakery" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ch2-DI-ilS">
                             <rect key="frame" x="16" y="267" width="208" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rO-Wr-nb0">
                             <rect key="frame" x="134" y="316" width="90" height="36"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="90" id="XNw-qV-g9G"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="XNw-qV-g9G"/>
                                 <constraint firstAttribute="height" constant="36" id="aZH-Hm-0BO"/>
                             </constraints>
-                            <state key="normal" title="Dimiss"/>
+                            <state key="normal" title="Dimiss">
+                                <color key="titleColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
                             <connections>
                                 <action selector="popoverDismissButtonPressed:" destination="t4L-Ml-lkf" eventType="touchUpInside" id="pi4-3T-PH5"/>
                             </connections>
@@ -524,10 +526,12 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipm-Zs-pIY">
                             <rect key="frame" x="16" y="316" width="90" height="36"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="90" id="Q18-Ta-6Uo"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="Q18-Ta-6Uo"/>
                                 <constraint firstAttribute="height" constant="36" id="xRP-N2-Nv2"/>
                             </constraints>
-                            <state key="normal" title="Button"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
                             <connections>
                                 <action selector="popoverAddButtonPressed:" destination="t4L-Ml-lkf" eventType="touchUpInside" id="fCu-cA-qEk"/>
                             </connections>
@@ -536,7 +540,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="240" height="256"/>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="Xty-ph-fuo" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" id="3XL-Hy-ELx"/>
                         <constraint firstItem="nvz-vm-boJ" firstAttribute="leading" secondItem="UeE-eQ-Ijo" secondAttribute="leading" constant="16" id="Dzz-Tu-cc0"/>
